--- a/index.html
+++ b/index.html
@@ -162,7 +162,12 @@
         <footer class="app-footer">
             <div class="footer-left">
                 <div class="badge-box">
-                    <span class="badge-text">GUARDABRAZO</span>
+                    <!-- Desktop: Plain Text -->
+                    <span class="badge-text desktop-only">GUARDABRAZO</span>
+                    <!-- Mobile: Link -->
+                    <a href="https://instagram.com/guardabrazo" target="_blank" rel="noopener noreferrer"
+                        class="badge-text mobile-only"
+                        style="text-decoration: none; color: inherit; display: none;">GUARDABRAZO</a>
                     <div class="footer-links">
                         <a href="https://instagram.com/guardabrazo" target="_blank"
                             rel="noopener noreferrer">INSTAGRAM</a>
