--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <div id="start-overlay" class="init-overlay">
         <div class="init-content">
             <h2 class="overlay-title">AVIADRIFT</h2>
+            <p class="overlay-description">EXPLORE THE SONIC LANDSCAPE THROUGH GEO-LOCATED BIRD SONGS AND AMBIENT FIELD
+                RECORDINGS</p>
             <p class="overlay-subtitle">CLICK TO BEGIN</p>
         </div>
     </div>
