--- a/index.html
+++ b/index.html
@@ -153,17 +153,10 @@
                     </div>
                     <div class="panel-content">
                         <div class="control-group">
-                            <label>BIRDS</label>
+                            <label>VOLUME</label>
                             <div class="slider-container">
-                                <input type="range" id="birds-volume" min="0" max="100" value="70">
-                                <span class="value-display" id="birds-volume-val">70%</span>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label>BACKGROUND</label>
-                            <div class="slider-container">
-                                <input type="range" id="field-volume" min="0" max="100" value="50">
-                                <span class="value-display" id="field-volume-val">50%</span>
+                                <input type="range" id="master-volume" min="0" max="100" value="70">
+                                <span class="value-display" id="master-volume-val">70%</span>
                             </div>
                         </div>
                         <div class="transport-controls">
